--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
             祝您游览愉快
         </H1>
         <p>本网站是本人第一次对HTML的尝试，若有错误或意见指导，请多多指教</p>
+        <form name="input" action="html_form_action.php" method="get">
+Username: <input type="text" name="user">
+<input type="submit" value="Submit">
+</form>
     </BOdy>
 </html>
