--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
             祝您游览愉快
         </H1>
         <p>本网站是本人第一次对HTML的尝试，若有错误或意见指导，请多多指教</p>
-       
+        <p>即使很多次想对网站进行完善，但无奈时间并不充足，对HTTP的学习也极为缓慢，希望下一次能下定决心讲网页做好</p>
     </BOdy>
 </html>
